# aiogram-template

./: .env.example  main.py  pyproject.toml
migrations/versions/: 65aed03d3ad8_init.py
pkg/: logging.py
src/: config.py
src/bot/: bot.py
src/bot/filters/: filters.py
src/bot/keyboards/: keyboards.py  register.py
src/bot/lexicon/: lexicon.py
src/bot/middlewares/: logger_mw.py  storage_mw.py
src/bot/routers/: routers.py
src/bot/routers/start/: start.py
src/storage/: storage.py
src/storage/db/models/: user.py
src/storage/db/repositories/: user.py
src/storage/redis/: conect.py
